@@ -55,12 +55,6 @@ PATCHES PROPOSED TO BACKPORT FROM TRUNK:
     Jira: https://issues.apache.org/jira/browse/TS-860
     +1: zwoop, igalic, amc
 
-  * API: TSFetchRestpGet(), TSFetchPageResptGet() and TSFetchUrl() have
-         incorrect asserts.
-    Trunk patch: http://svn.apache.org/viewvc?rev=1146414&view=rev
-    Jira: https://issues.apache.org/jira/browse/TS-875
-    +1: zwoop, jesus, amc
-
 RELEASE PROCESS
 
 The Traffic Server release process is documented at
